--- a/java.envdev.git/dockerfile
+++ b/java.envdev.git/dockerfile
@@ -16,6 +16,7 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y \
     libgtk2.0-0 \
     vim \
     gedit \
+    bash-completion \
     && echo "alias ll='ls -lart'" >> /etc/bash.bashrc && \
        echo "export PS1=\"\\\[\033[01;32m\\\]\\u@\\h\\\[\033[00m\\\]:\\\[\033[01;34m\\\]\\w\\\[\033[00m\\\]\\\$ \"" >> /etc/bash.bashrc && \
        echo "source /etc/bash_completion" >> /etc/bash.bashrc && \
